force-app/main/default/objects/Insert_Error_Log__e/Insert_Error_Log__e.object-meta.xml
<CustomObject>
    <label>Insert Error Log</label>
    <pluralLabel>Insert Error Logs</pluralLabel>
</CustomObject>