force-app/main/default/objects/Insert_Error_Log__e/fields/ApexClass__c.field-meta.xml
<CustomField>
    <fullName>ApexClass__c</fullName>
    <description>Apex class name of generated error</description>
    <label>Apex Class</label>
    <length>100</length>
    <type>Text</type>
</CustomField>