force-app/main/default/objects/Insert_Error_Log__e/fields/ErrorLine__c.field-meta.xml
<CustomField>
    <fullName>ErrorLine__c</fullName>
    <description>Error line number</description>
    <label>Error Line</label>
    <length>10</length>
    <type>Text</type>
</CustomField>