force-app/main/default/objects/Insert_Error_Log__e/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <description>Apex method that has generated the error</description>
    <label>Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>