force-app/main/default/objects/Insert_Error_Log__e/fields/SupportTeam__c.field-meta.xml
<CustomField>
    <fullName>SupportTeam__c</fullName>
    <description>Support Team of Exception generated</description>
    <label>SupportTeam</label>
    <length>20</length>
    <type>Text</type>
</CustomField>