force-app/main/default/objects/Insert_Error_Log__e/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <description>User who performed the operation</description>
    <label>User</label>
    <length>18</length>
    <type>Text</type>
</CustomField>